--- a/M11A12_ADCSamplingTime/M11A12_ADCSamplingTime.ioc
+++ b/M11A12_ADCSamplingTime/M11A12_ADCSamplingTime.ioc
@@ -1,10 +1,12 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_5
-ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
+ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV64
 ADC1.CommonPathInternal=null|null|null|null
 ADC1.ContinuousConvMode=ENABLE
 ADC1.DMAContinuousRequests=ENABLE
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,DMAContinuousRequests,ClockPrescaler,CommonPathInternal
+ADC1.EOCSelection=ADC_EOC_SINGLE_CONV
+ADC1.ExternalTrigConv=ADC_SOFTWARE_START
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,DMAContinuousRequests,ClockPrescaler,ExternalTrigConv,EOCSelection,CommonPathInternal
 ADC1.NbrOfConversionFlag=1
 ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.Rank-0\#ChannelRegularConversion=1
@@ -25,6 +27,7 @@ Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlign
 Dma.Request0=ADC1
 Dma.RequestsNb=1
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32L432KCU3
 Mcu.Family=STM32L4
@@ -42,8 +45,8 @@ Mcu.PinsNb=2
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L432KCUx
-MxCube.Version=6.8.1
-MxDb.Version=DB.6.0.81
+MxCube.Version=6.9.0
+MxDb.Version=DB.6.0.90
 NVIC.ADC1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
@@ -68,7 +71,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32L432KCUx
-ProjectManager.FirmwarePackage=STM32Cube FW_L4 V1.17.2
+ProjectManager.FirmwarePackage=STM32Cube FW_L4 V1.18.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
@@ -86,67 +89,68 @@ ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
+ProjectManager.UAScriptAfterPath=
+ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true
 RCC.48CLKFreq_Value=24000000
-RCC.ADCCLockSelection=RCC_ADCCLKSOURCE_SYSCLK
-RCC.ADCFreq_Value=1000000
-RCC.AHBFreq_Value=1000000
-RCC.APB1Freq_Value=1000000
-RCC.APB1TimFreq_Value=1000000
-RCC.APB2Freq_Value=1000000
-RCC.APB2TimFreq_Value=1000000
-RCC.CortexFreq_Value=1000000
-RCC.FCLKCortexFreq_Value=1000000
+RCC.ADCFreq_Value=16000000
+RCC.AHBFreq_Value=64000000
+RCC.APB1Freq_Value=64000000
+RCC.APB1TimFreq_Value=64000000
+RCC.APB2Freq_Value=64000000
+RCC.APB2TimFreq_Value=64000000
+RCC.CortexFreq_Value=64000000
+RCC.FCLKCortexFreq_Value=64000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=1000000
+RCC.HCLKFreq_Value=64000000
 RCC.HSE_VALUE=8000000
 RCC.HSI16_VALUE=16000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=1000000
+RCC.I2C1Freq_Value=64000000
 RCC.I2C2Freq_Value=16000000
-RCC.I2C3Freq_Value=1000000
-RCC.IPParameters=48CLKFreq_Value,ADCCLockSelection,ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,LCDFreq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIMFreq_Value,LPUART1Freq_Value,LPUARTFreq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MCOPinFreq_Value,MSIClockRange,MSI_VALUE,PLLCLKFreq_Value,PLLMUL,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLR,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,RNGFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAI1Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,TIMFreq_Value,TimerFreq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,WatchDogFreq_Value
+RCC.I2C3Freq_Value=64000000
+RCC.IPParameters=48CLKFreq_Value,ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,LCDFreq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIMFreq_Value,LPUART1Freq_Value,LPUARTFreq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PLLMUL,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1R,PLLSAI1RoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,RNGFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAI1Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,WatchDogFreq_Value
 RCC.LCDFreq_Value=37000
-RCC.LPTIM1Freq_Value=1000000
-RCC.LPTIM2Freq_Value=1000000
+RCC.LPTIM1Freq_Value=64000000
+RCC.LPTIM2Freq_Value=64000000
 RCC.LPTIMFreq_Value=32000000
-RCC.LPUART1Freq_Value=1000000
+RCC.LPUART1Freq_Value=64000000
 RCC.LPUARTFreq_Value=32000000
 RCC.LSCOPinFreq_Value=32000
+RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
-RCC.MCO1PinFreq_Value=1000000
+RCC.MCO1PinFreq_Value=64000000
 RCC.MCOPinFreq_Value=32000000
-RCC.MSIClockRange=RCC_MSIRANGE_4
-RCC.MSI_VALUE=1000000
+RCC.MSI_VALUE=4000000
 RCC.PLLCLKFreq_Value=32000000
 RCC.PLLMUL=RCC_PLLMUL_4
-RCC.PLLN=16
-RCC.PLLPoutputFreq_Value=36571428.571428575
-RCC.PLLQoutputFreq_Value=128000000
-RCC.PLLR=RCC_PLLR_DIV4
+RCC.PLLPoutputFreq_Value=18285714.285714287
+RCC.PLLQoutputFreq_Value=64000000
 RCC.PLLRCLKFreq_Value=64000000
-RCC.PLLSAI1PoutputFreq_Value=36571428.571428575
-RCC.PLLSAI1QoutputFreq_Value=128000000
-RCC.PLLSAI1RoutputFreq_Value=128000000
+RCC.PLLSAI1PoutputFreq_Value=18285714.285714287
+RCC.PLLSAI1QoutputFreq_Value=64000000
+RCC.PLLSAI1R=RCC_PLLR_DIV8
+RCC.PLLSAI1RoutputFreq_Value=16000000
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSI
-RCC.PWRFreq_Value=1000000
-RCC.RNGFreq_Value=128000000
+RCC.PWRFreq_Value=64000000
+RCC.RNGFreq_Value=64000000
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
-RCC.SAI1Freq_Value=36571428.571428575
-RCC.SWPMI1Freq_Value=1000000
-RCC.SYSCLKFreq_VALUE=1000000
+RCC.SAI1Freq_Value=18285714.285714287
+RCC.SWPMI1Freq_Value=64000000
+RCC.SYSCLKFreq_VALUE=64000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TIMFreq_Value=32000000
 RCC.TimerFreq_Value=32000000
-RCC.USART1Freq_Value=1000000
-RCC.USART2Freq_Value=1000000
+RCC.USART1Freq_Value=64000000
+RCC.USART2Freq_Value=64000000
 RCC.USART3Freq_Value=16000000
-RCC.USBFreq_Value=128000000
+RCC.USBFreq_Value=64000000
 RCC.VCOInputFreq_Value=16000000
-RCC.VCOOutputFreq_Value=256000000
-RCC.VCOSAI1OutputFreq_Value=256000000
+RCC.VCOOutputFreq_Value=128000000
+RCC.VCOSAI1OutputFreq_Value=128000000
 RCC.WatchDogFreq_Value=32000
 SH.ADCx_IN5.0=ADC1_IN5,IN5-Single-Ended
 SH.ADCx_IN5.ConfNb=1
